// Original file: profile.proto


export interface Profile {
  'id'?: (string);
  'created'?: (string);
  'updated'?: (string);
  'deleted'?: (string);
  'userId'?: (string);
  'name'?: (string);
  'about'?: (string);
  'avatarId'?: (string);
  'avatarUrl'?: (string);
  'coverId'?: (string);
  'coverUrl'?: (string);
  'resumeId'?: (string);
}

export interface Profile__Output {
  'id': (string);
  'created': (string);
  'updated': (string);
  'deleted': (string);
  'userId': (string);
  'name': (string);
  'about': (string);
  'avatarId': (string);
  'avatarUrl': (string);
  'coverId': (string);
  'coverUrl': (string);
  'resumeId': (string);
}
